--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
   },
   "homepage": "https://github.com/andresfsa12/SERVIN-NET#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mysql2": "^3.15.3",
+    "path": "^0.12.7",
     "sequelize": "^6.37.7"
   }
 }
