--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "mysql2": "^3.15.3",
     "path": "^0.12.7",
     "sequelize": "^6.37.7"
